[gd_scene load_steps=9 format=3 uid="uid://dogef2cfafdq5"]

[ext_resource type="Script" path="res://Player.gd" id="1_bk74n"]
[ext_resource type="Texture2D" uid="uid://dgemb5ks7jop5" path="res://Bullet-Hell-Assets/player.png" id="2_a8oq1"]
[ext_resource type="Script" path="res://Scripts/Bullet_Pool.gd" id="3_2sje7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7ig2o"]
atlas = ExtResource("2_a8oq1")
region = Rect2(0, 0, 16, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_yokyb"]
atlas = ExtResource("2_a8oq1")
region = Rect2(16, 0, 16, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijh6c"]
atlas = ExtResource("2_a8oq1")
region = Rect2(32, 0, 16, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_ql752"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ig2o")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yokyb")
}],
"loop": true,
"name": &"side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijh6c")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i4cp6"]
size = Vector2(12, 15)

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("Anim") groups=["Player"]]
motion_mode = 1
script = ExtResource("1_bk74n")
speed = 200.0
Anim = NodePath("AnimatedSprite2D")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ql752")
animation = &"down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_i4cp6")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.72, 1.72)
limit_smoothed = true

[node name="Bullet_Pool" type="Node" parent="."]
script = ExtResource("3_2sje7")
pool_size = 30

[node name="Fire_rate" type="Timer" parent="."]
autostart = true

[node name="bullet_spawn_point" type="Marker2D" parent="."]
position = Vector2(0, 10)
rotation = -0.00570733

[connection signal="timeout" from="Fire_rate" to="." method="_on_fire_rate_timeout"]
